--- a/src/assets/transiton.css
+++ b/src/assets/transiton.css
@@ -7,3 +7,18 @@
 .fade-leave-to {
     opacity: 0;
 }
+
+.flip-list-move {
+    transition: transform 0.8s ease;
+}
+
+.list-enter-active,
+.list-leave-active {
+    transition: all 1s ease;
+}
+
+.list-enter-from,
+.list-leave-to {
+    opacity: 0;
+    transform: translateY(30px);
+}
